--- a/playground.ipynb
+++ b/playground.ipynb
@@ -39,9 +39,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Halo, rakha\n"
+     ]
+    }
+   ],
    "source": [
     "nama = input(\"Masukkan nama: \")\n",
     "print(\"Halo, \" + nama)"
@@ -49,9 +57,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ID: 322023\n"
+     ]
+    }
+   ],
    "source": [
     "# challenge 1\n",
     "# masukkan id pada input sesuai dengan tipe data yang sudah ditentukan\n",
@@ -69,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -129,14 +145,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Too high\n"
+      "Too low\n",
+      "Too low\n"
      ]
     }
    ],
@@ -156,17 +173,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 pangkat 5 = 1000\n"
+     ]
+    }
+   ],
    "source": [
     "# challenge 2\n",
-    "x = ___\n",
+    "x = 10\n",
     "y = 3\n",
     "\n",
-    "command = ___(input(\"Masukkan command: \"))\n",
+    "command = int(input(\"Masukkan command: \"))\n",
     "if command == 1:\n",
-    "    print(f\"{x} pangkat {___} = {x ** y}\") # output seharusnya 1000\n",
+    "    print(f\"{x} pangkat {y} = {x ** y}\") # output seharusnya 1000\n",
     "else:\n",
     "    print(\"Command tidak dikenali\")\n"
    ]
@@ -181,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -220,14 +245,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x + y = 241\n"
+     ]
+    }
+   ],
    "source": [
     "# challenge 3\n",
     "# modifikasi value x dan y\n",
-    "x = 120,5\n",
-    "y = 120,5\n",
+    "x = 120\n",
+    "y = 121\n",
     "print(f\"x + y = {x + y}\") # x + y should be 241"
    ]
   },
@@ -241,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -289,14 +322,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Access granted\n"
+      "Access denied\n"
      ]
     }
    ],
@@ -352,32 +385,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[9, 7, 5, 3, 1]\n"
+      "[9, 8, 7, 6, 5, 4, 3, 2, 1]\n"
      ]
     }
    ],
    "source": [
     "# challenge 4\n",
     "list2 = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
-    "print(list2[__:__:__]) # output seharusnya [9, 7, 5, 3, 1]"
+    "print(list2[-2:-11:-1]) # output seharusnya [9, 7, 5, 3, 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['John', 25, 'orange', True, 3.14, 'apple']\n"
+     ]
+    }
+   ],
    "source": [
     "# challenge 5\n",
     "ls = [\"John\", 25, True, 3.14, \"apple\"]\n",
-    "ls.___(__, ___)\n",
+    "ls.insert(2,'orange')\n",
     "print(ls) # Output: ['John', 25, 'orange', True, 3.14, 'apple']"
    ]
   },
@@ -391,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -421,12 +462,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "employee = {\n",
-    "    'name': 'Erik',\n",
+    "    'name': 'eric',\n",
     "    'age': 53,\n",
     "    'address': 'Jl. Mangkunegaran 10',\n",
     "    'hobbies': ['reading', 'swimming', 'travelling'],\n",
@@ -440,25 +481,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Samuel\n"
+     ]
+    }
+   ],
    "source": [
     "# challenge 6\n",
     "# ubah value dari key 'name' menjadi 'Samuel'\n",
-    "employee['name'] = ___\n",
+    "employee['name'] = \"Samuel\"\n",
     "print(employee['name'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
    "source": [
     "# challenge 7\n",
     "# ubah value dari key 'age' menjadi 20 berdasatkan input user\n",
-    "employee['age'] = ___\n",
+    "employee['age'] = '20'\n",
     "print(employee['age'])"
    ]
   }
@@ -479,7 +536,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
