--- a/playground.ipynb
+++ b/playground.ipynb
@@ -462,9 +462,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['reading', 'swimming', 'travelling']\n",
+      "{'son': 'Ethan', 'daughter': 'Emily'}\n"
+     ]
+    }
+   ],
    "source": [
     "employee = {\n",
     "    'name': 'eric',\n",
@@ -476,7 +485,9 @@
     "    'son': 'Ethan',\n",
     "    'daughter': 'Emily'\n",
     "    }\n",
-    "}"
+    "}\n",
+    "print (employee['hobbies'])\n",
+    "print (employee['children'])"
    ]
   },
   {
